[gd_scene load_steps=18 format=2]

[ext_resource path="res://Menu/montain2.png" type="Texture" id=1]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://Menu/cloud_1.png" type="Texture" id=3]
[ext_resource path="res://Menu/dogicapixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Menu/exit.tres" type="Animation" id=5]
[ext_resource path="res://Menu/focus.tres" type="StyleBox" id=6]
[ext_resource path="res://Menu/Arcade-Puzzler.ogg" type="AudioStream" id=7]
[ext_resource path="res://Menu/farpro__guiclick.ogg" type="AudioStream" id=8]
[ext_resource path="res://Menu/button-press.wav" type="AudioStream" id=9]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.439453, 0.733185, 0.78125, 1, 0.0830079, 0, 0.664063, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=8]
resource_name = "settings_exit"
length = 0.4
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("Camera2D/Settings:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.0314268, 15.2045, 35.9405, -0.0572918, -22.8096, 0.0928721, 24.1923, -531.092, -0.257933, 394.334, 0.0918521, -151.743 ),
"times": PoolRealArray( 0, 0.1, 0.4 )
}

[node name="Menu" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="Node" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]
scroll_base_scale = Vector2( 0.5, 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 720, 0 )

[node name="sky" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer"]
position = Vector2( 310.486, 117.999 )
rotation = -1.5708
scale = Vector2( 0.321459, 812.973 )
texture = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="montain" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer"]
position = Vector2( 232.62, 312.267 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="Background"]
scroll_base_scale = Vector2( 0.2, 0.2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground2"]
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 480, 0 )

[node name="cloud" type="Sprite" parent="Background/ParallaxBackground2/ParallaxLayer"]
position = Vector2( 82.9481, 85.2686 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 195.04, 246.602 )
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="Main" type="Node2D" parent="Camera2D"]

[node name="NewGame" type="Button" parent="Camera2D/Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = -98.0
margin_right = 79.0
margin_bottom = -68.0
focus_neighbour_bottom = NodePath("../LoadGame")
focus_next = NodePath("../LoadGame")
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="Camera2D/Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = -42.0
margin_right = 79.0
margin_bottom = -12.0
focus_neighbour_top = NodePath("../NewGame")
focus_neighbour_bottom = NodePath("../Settings")
focus_next = NodePath("../Settings")
focus_previous = NodePath("../NewGame")
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Camera2D/Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = 14.0
margin_right = 79.0
margin_bottom = 44.0
focus_neighbour_top = NodePath("../LoadGame")
focus_neighbour_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../LoadGame")
custom_fonts/font = SubResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Camera2D/Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = 70.0
margin_right = 79.0
margin_bottom = 100.0
focus_neighbour_top = NodePath("../Settings")
focus_previous = NodePath("../Settings")
custom_fonts/font = SubResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Node2D" parent="Camera2D"]
position = Vector2( -531.092, 0 )

[node name="Music" type="Label" parent="Camera2D/Settings"]
margin_left = -192.0
margin_top = -100.0
margin_right = -49.0
margin_bottom = -83.0
custom_fonts/font = SubResource( 4 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="Camera2D/Settings"]
modulate = Color( 0.988235, 0.996078, 0.988235, 1 )
margin_left = -192.0
margin_top = -78.0
margin_right = -68.0
margin_bottom = -62.0
focus_neighbour_right = NodePath("../EffectSlider")
focus_neighbour_bottom = NodePath("../LanguageOption")
focus_next = NodePath("../EffectSlider")
max_value = 1.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effects" type="Label" parent="Camera2D/Settings"]
margin_left = 56.0
margin_top = -100.0
margin_right = 209.0
margin_bottom = -84.0
custom_fonts/font = SubResource( 4 )
text = "Effects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectSlider" type="HSlider" parent="Camera2D/Settings"]
modulate = Color( 0.988235, 0.996078, 0.988235, 1 )
margin_left = 56.0
margin_top = -78.0
margin_right = 180.0
margin_bottom = -62.0
focus_neighbour_left = NodePath("../MusicSlider")
focus_neighbour_bottom = NodePath("../FullScreen")
focus_next = NodePath("../LanguageOption")
focus_previous = NodePath("../MusicSlider")
max_value = 1.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageOption" type="OptionButton" parent="Camera2D/Settings"]
modulate = Color( 0.988235, 0.996078, 0.988235, 1 )
margin_left = -192.0
margin_top = -16.0
margin_right = -68.0
margin_bottom = 4.0
focus_neighbour_top = NodePath("../MusicSlider")
focus_neighbour_right = NodePath("../FullScreen")
focus_neighbour_bottom = NodePath("../Back")
focus_next = NodePath("../FullScreen")
focus_previous = NodePath("../EffectSlider")
custom_fonts/font = SubResource( 5 )
disabled = true
shortcut_in_tooltip = false
text = "Language"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreen" type="CheckBox" parent="Camera2D/Settings"]
margin_left = 56.0
margin_top = -16.0
margin_right = 222.0
margin_bottom = 8.0
focus_neighbour_left = NodePath("../LanguageOption")
focus_neighbour_top = NodePath("../EffectSlider")
focus_neighbour_bottom = NodePath("../Back")
focus_next = NodePath("../Back")
focus_previous = NodePath("../LanguageOption")
custom_styles/focus = ExtResource( 6 )
custom_fonts/font = SubResource( 6 )
shortcut_in_tooltip = false
text = "Full Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Camera2D/Settings"]
margin_left = -33.4735
margin_top = 73.4993
margin_right = 30.5265
margin_bottom = 93.4993
focus_neighbour_left = NodePath("../LanguageOption")
focus_neighbour_top = NodePath("../LanguageOption")
focus_neighbour_right = NodePath("../FullScreen")
focus_previous = NodePath("../FullScreen")
custom_fonts/font = SubResource( 7 )
shortcut_in_tooltip = false
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/main_exit = ExtResource( 5 )
anims/settings_exit = SubResource( 8 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="Button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="Camera2D/Main/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Camera2D/Main/LoadGame" to="." method="_on_Main_LoadGame_pressed"]
[connection signal="pressed" from="Camera2D/Main/Settings" to="." method="_on_main_Settings_pressed"]
[connection signal="pressed" from="Camera2D/Main/Quit" to="." method="_on_main_Quit_pressed"]
[connection signal="value_changed" from="Camera2D/Settings/MusicSlider" to="." method="_on_Settings_MusicSlider_value_changed"]
[connection signal="value_changed" from="Camera2D/Settings/EffectSlider" to="." method="_on_Settings_EffectSlider_value_changed"]
[connection signal="pressed" from="Camera2D/Settings/FullScreen" to="." method="_on_Settings_FullScreen_pressed"]
[connection signal="pressed" from="Camera2D/Settings/Back" to="." method="_on_Settings_Back_pressed"]
